# ProjectSave

./: .gitignore  README.md  Styles2.css  ca_marche.md  index.html  index.js  main.js  page2.html  styles.css
Application/: package-lock.json  package.json  setup.js
Application/scripts/: borghelper_dispatch.sh  client_backup.sh  client_fetch_bootstrap_key.sh  client_genkey.sh  install_all_clients.sh  prepclient.ps1  prepclient.sh
Application/src/: dashboard.html  index.html  loader.html  login.html  logs.html  main.js  preload.js  profile.html  renderer.js  restore.html  save.html  settings.html  style.css
Docker_borg/: docker-compose.yml
Docker_borg/server_scripts/: gen_gpg_passphrase.sh  preparedecrypt.sh  prepserv.sh
backend/strongholer/: .env  .env.json  .gitignore  Cargo.toml  Dockerfile  database.md  main.rs  readme.md  ssh_key
backend/strongholer/key.app/electron-key-app/: index.html  main.js  package-lock.json  package.json  preload.js
backend/strongholer/key.app/scripts/: create_ssh_key.sh  send_key.js
backend/strongholer/src/: auth.rs  error.rs  kdfpassword.rs  main.rs
backend/strongholer/src/authentification/: auth.md  auth.rs  kdfpassword.rs  middleware_auth.rs  mod.rs
backend/strongholer/src/route/: get_repot_key.rs  list_repot.rs  mod.rs  readme.md  send_ssh_key.rs  signin.rs  signup.rs
backend/strongholer/src/script/: borg_script.rs  mod.rs
backend/strongholer/src/script/script_sh/: create_user.sh  gen_gpg_passphrase.sh  install_all.sh  install_client_key.sh  install_client_tunnel_key.sh  preparedecrypt.sh  prepserv.sh
backend/strongholer/src/script/script_sh/client_folder/: borghelper_dispatch.sh  client_backup.sh
client_scripts/Linux/: README.md  borghelper_dispatch.sh  client_backup.sh  client_fetch_bootstrap_key.sh  client_genkey.sh  initial_connection.sh  open_tunnel.sh  prepclient.sh  restore.sh
client_scripts/Windows/: prepclient.ps1
docker/: .env  .gitignore  default.conf  docker-compose.yml  group  gshadow  passwd  readme.md  shadow
docker/alpine docker/: Dockerfile
docker/api/: .env.json  Cargo.toml  Dockerfile  config  entry-point.sh  readme.md
docker/api/src/: error.rs  main.rs
docker/api/src/authentification/: auth.md  auth.rs  middleware_auth.rs
docker/api/src/borg_script/: create_user.rs  install_client_key.rs  install_client_tunnel_key.rs  list_archive.rs  log.rs  mod.rs  restore.rs  ssh_pub_key_server.rs
docker/api/src/route/: get_list.rs  get_log.rs  get_repot_key.rs  get_ssh_pub_key_server.rs  list_repot.rs  mod.rs  readme.md  restore.rs  send_ssh_key.rs  send_ssh_key_tunnel.rs  signin.rs  signup.rs  ssh_test.rs
docker/api/src/stream_http/: mod.rs  stream_http.rs
docker/borg/: Dockerfile  docker-compose.yml  entrypoint.sh
docker/borg/client_folder/: borghelper_dispatch.sh  client_backup.sh  install_all_client.sh  install_borghelper_key.sh  prepclient.sh
docker/borg/server_scripts/: alloc_reverse_port.sh  create_user.sh  (+9 more)
docker/gen_credentials/: Dockerfile  docker-compose.yml  entry-point.sh
docker/mariadb/: Dockerfile  backup.sql  entrypoint.sh
docker/nginx/: nginx.conf
documentations des outils/: Duplicity.md  ceph_doc.md
server_scripts/: README.md  alloc_reverse_port.sh  create_user.sh  install_all.sh  install_client_key.sh  install_client_tunnel_key.sh  preparedecrypt.sh  prepserv.sh  save.sh  server_cleanup_key.sh
server_scripts/client_folder/: prepclient.sh
strongholder-client/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.workspace.ts
strongholder-client/src/: app.css
strongholder-client/src-tauri/: Cargo.toml  tauri.conf.json
strongholder-client/src-tauri/capabilities/: core.json  fs.json
strongholder-client/src-tauri/icons/: icon.icns
strongholder-client/src-tauri/resources/scripts/: borghelper_dispatch.sh  client_backup.sh  prepclient.sh
strongholder-client/src-tauri/src/: backup.rs  config.rs  installation.rs  lib.rs  network.rs  parsing.rs  system.rs
web/: Styles2.css  index.html  index.js  main.js  package-lock.json  package.json  page2.html  style.css  styles.css
(+34 files in other folders)
