[workspace]

[package]
name = "strongholer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "=4.12.1", features = ["cookies"] }
serde = "1.0.228"
argon2 = "0.5.3"
sqlx = { version = "0.8.6", features = [ "runtime-async-std","mysql" ] }
openssl = { version = "0.10", features = ["vendored"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
uuid = { version = "1.19.0", features = ["v4"] }
hex = "0.4"
async-std = { version = "1.13.2", features = ["attributes", "unstable"] }
actix-multipart = "0.7.2"
actix-files = "0.6"
config = "0.15.19"
secrecy = "0.10.3"
